# Tutoriales

./: package-lock.json
OrderingAccountsSolana/: main.js
SafeTokenTransferApp/: Anchor.toml
SafeTokenTransferApp/programs/SafeTokenTransferApp/: Cargo.toml
SafeTokenTransferApp/programs/SafeTokenTransferApp/src/: lib.rs
SafeTokenTransferApp/tests/: SafeTokenTransferApp.ts
ToDoList/: Anchor.toml
ToDoList/tests/: ToDoList.ts
basic-1/: Anchor.toml
basic-1/tests/: basic-1.js
blog/: Anchor.toml
blog-anchor/: Anchor.toml
blog-anchor/tests/: blog-anchor.ts
blog/tests/: blog.ts
crunchy-vs-smooth/: Anchor.toml
crunchy-vs-smooth/app/: package-lock.json  package.json
crunchy-vs-smooth/tests/: crunchy-vs-smooth.js
escrow/: Anchor.toml
escrow/tests/: escrow.ts
escrowAnchor/: Anchor.toml
escrowAnchor/tests/: escrowAnchor.ts
gm-solana/: Anchor.toml  package.json
guessing_game/src/: main.rs
mycalculatordapp/: Anchor.toml
mycalculatordapp/tests/: mycalculatordapp.ts
mysolanaapp/: Anchor.toml
mysolanaapp/tests/: mysolanaapp.js
solana-twitter/: Anchor.toml
solana-twitter/tests/: solana-twitter.ts
the-alpha/: Anchor.toml
the-alpha/programs/the-alpha/: Cargo.toml
the-alpha/programs/the-alpha/src/: lib.rs  state.rs
the-alpha/programs/the-alpha/src/instructions/: init_article.rs  init_author.rs  init_reader.rs  mod.rs  sub_to_author.rs  update_article.rs  update_author.rs
tic-tact-toe/: Anchor.toml
ticketing-system/: Anchor.toml
to-do-list/: Anchor.toml
token-cpi/: Anchor.toml  package.json
verifyNFT/: Anchor.toml
(+58 files in other folders)
